--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -1,6 +1,13 @@
-html {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+:root {
+    font-family: 'Inter', sans-serif;
+    font-size: 62.5%;
+}
+
+body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 62.5%;
+    width: 100%;
+    height: 100%;
 }
