--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root {
     font-family: 'Inter', sans-serif;
@@ -10,4 +10,41 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
+}
+
+.main {
+    width: 90%;
+    margin: 0 auto;
+
+}
+
+article {
+    --secundary-color: #fed001;
+}
+
+
+.first-article {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.first-article h1 {
+    font-size: 4.8rem;
+    font-weight: 500;
+}
+
+span {
+    text-transform: uppercase;
+}
+
+.first-article a {
+    background-color: var(--secundary-color);
+    text-decoration: none;
+    font-size: 1.8rem;
+    color: #000;
+
+    padding: 1.6rem 4.6rem;
+    
+    border-radius: 4px;
 }
