--- a/projeto-aprenser/styles/header.css
+++ b/projeto-aprenser/styles/header.css
@@ -1,10 +1,14 @@
-header {
-    --background-color: #2a2a2a;
-    --text-color: #fed001;
+
+.header-container {
+    background-color: var(--primary-color);
+    position: sticky;
+    top: 0;
+    left: 0;
+
+    width: 100%;
 }
 
 .header {
-    background-color: var(--background-color);
     display: flex;
     justify-content: space-between;
     align-items: center ;
@@ -18,13 +22,13 @@ header {
 }
 
 .nav__list-item a{
-    color: var(--text-color);
+    color: var(--secondary-color);
     text-decoration: none;
     font-size: 1.6em;
     text-transform: capitalize;
 
     padding: 1.2rem 1.84rem;
-    outline: solid 0.1em var(--text-color);
+    outline: solid 0.1em var(--secondary-color);
 }
 
 .nav__list-item a:hover {
