--- a/projeto-aprenser/styles/header.css
+++ b/projeto-aprenser/styles/header.css
@@ -6,19 +6,20 @@
     left: 0;
 
     width: 100%;
+    padding-top: 1px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center ;
-    padding: 2.7vh 5.15vw;
+    padding: 2rem 0;
 }
 
 .nav__list {
     list-style-type: none;
     display: flex; 
-    gap: 0.8em;
+    gap: 0.8rem;
 }
 
 .nav__list-item a{
@@ -27,7 +28,7 @@
     font-size: 1.6em;
     text-transform: capitalize;
 
-    padding: 1.2rem 1.84rem;
+    padding: 0.75em 1.15em;
     outline: solid 0.1em var(--secondary-color);
 }
 
