--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root {
-    font-family: 'Inter', sans-serif;
-    font-size: 62.5%;
+    font: 400 62.5% 'Inter', sans-serif;
     --primary-color: #2a2a2a;
     --secondary-color: #fed001;
 }
@@ -12,6 +11,10 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
+}
+
+p, a {
+    font-size: 1.6rem;
 }
 
 .max-width-center {
