--- a/projeto-aprenser/styles/header.css
+++ b/projeto-aprenser/styles/header.css
@@ -19,17 +19,17 @@
 .nav__list {
     list-style-type: none;
     display: flex; 
-    gap: 0.8rem;
+    gap: 0.6rem;
 }
 
 .nav__list-item a{
     color: var(--secondary-color);
     text-decoration: none;
     font-size: 1.6em;
-    text-transform: capitalize;
+    
 
     padding: 0.75em 1.15em;
-    outline: solid 0.1em var(--secondary-color);
+    border: solid 0.1em var(--secondary-color);
 }
 
 .nav__list-item a:hover {
