--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -17,42 +17,29 @@ p, a {
     font-size: 1.6rem;
 }
 
-.max-width-center {
+.wrapper-container {
+    padding-top: 1px;
+}
+
+.wrapper-container-fixed {
+    position: sticky;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+.wrapper-container-dark {
+    background-color: var(--primary-color);
+}
+
+.header-container {
+    background-color: var(--primary-color);
+    position: sticky;
+    
+    padding-top: 1px;
+}
+
+.container-max-width-center {
     max-width: 127.6rem;
     margin: 0 auto;
-}
-
-.banner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.banner__title {
-    font-size: 4.8rem;
-    font-weight: 500;
-}
-
-.title__span {
-    text-transform: uppercase;
-}
-
-.banner__a{
-    background-color: var(--secondary-color);
-    text-decoration: none;
-    font-size: 1.8rem;
-    color: #000;
-
-    padding: 1.6rem 4.6rem;
-    
-    border-radius: 4px;
-}
-
-.cursos_container {
-    display: flex;
-    gap: 2rem;
-}
-
-.curso_card {
-    
 }
