--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -21,6 +21,15 @@ p, a {
     padding-top: 1px;
 }
 
+.wrapper-container-max-width-center {
+    max-width: 127.6rem;
+    margin: 0 auto;
+}
+
+.wrapper-container-padded {
+    padding: 12rem;
+}
+
 .wrapper-container-fixed {
     position: sticky;
     width: 100%;
@@ -28,18 +37,19 @@ p, a {
     left: 0;
 }
 
+.wrapper-container-light{
+    background-color: #fafafa;
+}
+
 .wrapper-container-dark {
     background-color: var(--primary-color);
 }
 
-.header-container {
-    background-color: var(--primary-color);
-    position: sticky;
-    
-    padding-top: 1px;
+.wrapper-container-dark2 {
+    background-color: #003464;
+    color: #fafafa;
 }
 
-.container-max-width-center {
-    max-width: 127.6rem;
-    margin: 0 auto;
+.wrapper-container-gradient {
+    background-image: linear-gradient(transparent, rgb(255, 255, 86));
 }
