estilizado secao banner e adicionado arquivos para as proximas secoes

--- a/projeto-aprenser/styles/banner.css
+++ b/projeto-aprenser/styles/banner.css
@@ -3,13 +3,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20rem;
 }
 
 .banner__title {
     font-size: 4.8rem;
+    margin-bottom: 4rem;
 }
 
-.title__span {
+.uppercase {
     text-transform: uppercase;
 }
 
