--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 
 :root {
     font: 400 62.5% 'Inter', sans-serif;
