--- a/projeto-aprenser/styles/banner.css
+++ b/projeto-aprenser/styles/banner.css
@@ -7,7 +7,6 @@
 }
 
 .banner__title {
-    font-size: 4.8rem;
     margin-bottom: 4rem;
 }
 
@@ -16,7 +15,7 @@
 }
 
 .banner__a{
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     text-decoration: none;
     font-size: 1.8rem;
     color: #000;
