--- a/projeto-aprenser/styles/header.css
+++ b/projeto-aprenser/styles/header.css
@@ -13,13 +13,13 @@
 }
 
 .nav__list-item a{
-    color: var(--secondary-color);
+    color: var(--primary-color);
     text-decoration: none;
     font-size: 1.6em;
     
 
     padding: 0.75em 1.15em;
-    border: solid 0.1em var(--secondary-color);
+    border: solid 0.1em var(--primary-color);
 }
 
 .nav__list-item a:hover {
