--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap");
 
 
 :root {
+    --primary-color: #fed001;
+    --secondary-color: #2a2a2a;
+}
+
+html {
     font: 400 62.5% 'Inter', sans-serif;
-    --primary-color: #2a2a2a;
-    --secondary-color: #fed001;
 }
 
 body {
@@ -60,7 +63,7 @@ nav a {
 }
 
 .wrapper-container-dark {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
 }
 
 .wrapper-container-dark2 {
@@ -70,4 +73,14 @@ nav a {
 
 .wrapper-container-gradient {
     background-image: linear-gradient(transparent, rgb(255, 255, 86));
+}
+
+.btn {
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    font-size: 1.8rem;
+    text-decoration: none;
+    padding: 1.6rem 4.6rem;
+    display: inline-block;
+    color: inherit;
 }
