--- a/projeto-aprenser/styles/cursos.css
+++ b/projeto-aprenser/styles/cursos.css
@@ -1,4 +1,40 @@
+.cursos-section {
+    text-align: center;
+}
+
+.cursos-section__title{
+    text-align: center;
+    padding: 7rem 0;
+    margin: 0;
+}
+
 .cursos_container {
     display: flex;
+    text-align: left;
     gap: 2rem;
+}
+
+.curso-card {
+    flex: 1;
+}
+
+.curso-card__img {
+    display: block;
+    width: 100%;
+}
+
+.curso-card__content {
+    padding: 1rem 1.25rem;
+    border: 1px solid #ccc;
+    border-radius: 0 0 8px 8px;
+    border-top: transparent;
+}
+
+.curso__title {
+    font-size: 2.4rem;
+}
+
+.curso__content {
+    font-size: 1.8rem;
+    line-height: 1.5;
 }
