--- a/projeto-aprenser/styles/style.css
+++ b/projeto-aprenser/styles/style.css
@@ -64,6 +64,7 @@ nav a {
 
 .wrapper-container-dark {
     background-color: var(--secondary-color);
+    color: #fafafa;
 }
 
 .wrapper-container-dark2 {
